--- a/math154/calculus1_exp_log_functions.html
+++ b/math154/calculus1_exp_log_functions.html
@@ -74,7 +74,7 @@ $(function () {
     <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_o55vs60m&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_d5uwrloh" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
   </div>
 
-  <h2>Example - inflation </h2>
+  <!--<h2>Example - inflation </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example</button>
     <div id="ex2" class="collapse">
   <P>“During 1988, Nicaragua’s inflation rate averaged 1.3% a day.” Which formula represents the above statement? Assume t is measured in days.
@@ -83,6 +83,19 @@ $(function () {
 <li>(b) \(I = I_0(1.013)^t\)
 <li>(c) \(I = I_0(1.013)t\)
 <li>(d) \(I = I_0(1.3)t\)
+</ol>
+
+</div>-->
+<h2>Example -  </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2n">Example</button>
+  <div id="ex2n" class="collapse">
+<P>Which of the following is an exponential function which has a \(y\) intercept of 4 and goes
+through the point (2,9)? (hint: think fractions)
+<ol type='A'>
+<li>\(f(x) = 4 \cdot 1.25^x\)<br><br>
+<li>\( f(x) = 4 \cdot 1.5^x\)<br><br>
+<li>\(f(x) = 4 \cdot 2.25^x\)<br><br>
+<li>\(f(x) = 4 \cdot (\sqrt{9/2})^x\)<br><br>
 </ol>
 
 </div>
