--- a/math250/laplace_transforms.html
+++ b/math250/laplace_transforms.html
@@ -116,7 +116,9 @@ We also have that \(\displaystyle f(t) = \mathcal{L}^{-1}(F(s)) = \frac{-1}{t}\m
 <br>
 <br><p><b>Example 1: </b>\(\displaystyle \mathcal{L}(t e^{-2t}) = -\frac{d}{ds}\mathcal{L}(e^{-2t}) = -\frac{d}{ds} \frac{1}{s+2} = - \frac{-1}{(s+2)^2} = \frac{1}{(s+2)^2} \)
 <br><p><b>Example 2: </b>\(\displaystyle \mathcal{L}(t \sin(3t)) = -\frac{d}{ds}\mathcal{L}(\sin(3t)) = -\frac{d}{ds} \left( \frac{3}{s^2 + 3^2}\right) = (-3)(-1) \left( \frac{1}{s^2 + 3^2}\right)^2 (2s) = \frac{6s}{(s^2 + 3^2)^2} \)
+<br>
 
+<h2>More to come ...</h2>
 
 <footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
 </body>
