--- a/math250/DELAhome.html
+++ b/math250/DELAhome.html
@@ -44,6 +44,7 @@
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week12.html">week 12</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week13.html">week 13</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/week14.html">week 14</a>
+  <li><a href="https://tyler-skorczewski-math.github.io/math250/laplace_transforms.html">Laplace Transforms</a>
   <li><a href="https://tyler-skorczewski-math.github.io/math250/starwarsexample.html">Star Wars example</a>
 </ul>
 
