--- a/math250/week3.html
+++ b/math250/week3.html
@@ -94,7 +94,7 @@ EM
     $$ \frac{dy}{dx} = y-x. $$
 <ol type='1'>
 <li> Label this equation using vocabulary from the course.
-<li> Find particular solutions to the DE \( \frac{dy}{dx} = x - y\) with initial conditions:
+<li> Find particular solutions to the DE \( \frac{dy}{dx} = y-x\) with initial conditions:
   <ol type='a'>
     <li> \( y(0) = 2 \) <br> <br>
     <li> \( y(0.1) = 2.2\) (you'll need a calculator/computer - find C to 3 digits) <br> <br>
