--- a/math250/week4.html
+++ b/math250/week4.html
@@ -171,7 +171,7 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example 8</button>
 <div id="ex8" class="collapse">
 
-<P> A 350 seat movie theater charges $10.50 admission for adults and $7.50 for children.
+<P> A 350 seat movie theater charges \(\$10.50\) admission for adults and \(\$7.50\) for children.
   If the theatre is full for a show and $3411 is collected, determine how many of each type of ticket was sold.
   <ol type='1'>
     <li> Identify the variables/unknowns that we need to find.
