--- a/math250/week4.html
+++ b/math250/week4.html
@@ -191,7 +191,7 @@
   <ul>
     <li>Purchase 500 books a month for a total of $19,500.
     <li>Purchase 50 more fiction than reference books.
-    <li>The average cost of fiction books is $30; nonfiction books are $40; and reference books are $50.
+    <li>The average cost of fiction books is \(\$30\); nonfiction books are \(\$40\); and reference books are \(\$50\).
   </ul>
   <P>How many of each type of book should the library acquire each month?
     <ol type='1'>
