--- a/math250/week4.html
+++ b/math250/week4.html
@@ -172,7 +172,7 @@
 <div id="ex8" class="collapse">
 
 <P> A 350 seat movie theater charges \(\$10.50\) admission for adults and \(\$7.50\) for children.
-  If the theatre is full for a show and $3411 is collected, determine how many of each type of ticket was sold.
+  If the theatre is full for a show and \(\$3411\) is collected, determine how many of each type of ticket was sold.
   <ol type='1'>
     <li> Identify the variables/unknowns that we need to find.
     <li> Write a system of equations that govern this problem.
@@ -189,7 +189,7 @@
 
 <P> The public libary is budgeted for fiction, nonfiction, and reference books as follows:
   <ul>
-    <li>Purchase 500 books a month for a total of $19,500.
+    <li>Purchase 500 books a month for a total of \(\$19,500\).
     <li>Purchase 50 more fiction than reference books.
     <li>The average cost of fiction books is \(\$30\); nonfiction books are \(\$40\); and reference books are \(\$50\).
   </ul>
