--- a/math250/week3.html
+++ b/math250/week3.html
@@ -463,6 +463,40 @@ $$ \frac{dy}{dx} = e^{x-y} \hspace{2cm} y(0) = 0 $$
 Can you explain the behavior you observe?
 </div>
 
+<h2>Example 7 </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example 7</button>
+<div id="ex7" class="collapse">
+
+<P> Find the general solution to the following DE.
+
+$$\frac{dx}{dt} = \frac{x}{t^2 + 5t + 4} + 4xt\sin(3t)$$
+
+</div>
+
+<h2>Example 8 </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex8">Example 8</button>
+<div id="ex8" class="collapse">
+<P>Suppose a population of rodents satisfies the differential equation \(dP/dt = kP^2\).
+  Initially there are \(P(0) = 2\) rodents, and their number is increasing at the rate of
+  \(dP/dt=1\) rodent per month when there are \(P=10\) rodents. How long will it take for the population to triple?
+
+</div>
+
+<h2>Example 9 </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example 9</button>
+  <div id="ex9" class="collapse">
+
+<P> Consider the DE \(\frac{dy}{dx} + xy = x\).
+  <ol type='1'>
+    <li>Label the DE.
+    <li>Use separation of variables to find a general solution.
+    <li>Use the integrating factor method to find a general solution. Does it agree with your solution from above?
+    <li>What is the particular solution with \(y(0) = 1\)?
+    <li>Do you expect Euler's method to do a good job approximating this particular solution? Why or why not?
+    <li>Do you expect the Runge-Kutta method to do a better job than Euler? Why or why not?
+    <li>Sketch a slope field for the DE.
+  </ol>
+</div>
 
 </body>
 </html>
