--- a/math154/calculus1_continuity.html
+++ b/math154/calculus1_continuity.html
@@ -94,9 +94,10 @@ removable, or infinite.
     <ol type='A'>
       <li>\(\displaystyle f(x) = \begin{cases} \frac{x^2 + 3x + 2}{x+2}, & x \neq 2 \\ k, & x=2\end{cases} \)<br><br>
       <li>\(\displaystyle f(x) = \begin{cases} 3x+2, & x< k \\ 2x-3, & x \geq k\end{cases} \)
-    </ol>
-    <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_57n4v4ib&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_d8wm3hm1" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe><br>
 
+    <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_57n4v4ib&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_d8wm3hm1" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe><br>
+    <li>\(\displaystyle f(x) = \begin{cases} \tan( x + k ), & 0 \leq x < \pi/2 \\ \sin(x), & x \geq \pi/2\end{cases} \)
+    </ol>
   </div>
 
   <h2>True/False</h2>
@@ -119,7 +120,8 @@ the home team had exactly 25 points.
     <P>Theorem: The Intermediate Value Theorem. Let \(f\) be continuous over a closed, bounded interval \([a,b]\).
        If \(z\) is any real number between \(f (a)\) and \(f (b)\), then there
        is a number \( c \in [a,b]\) satisfying \(f (c) = z\).
-       <br><br><br>
+       <br><br>
+      <P>True or False. \(x^3 - x = 1\) has a solution between \(x=1\) and \(x=2\). Use both a picture and the IVT to justify your answer.<br><br>
     <P>Use the statement “The cosine of t is equal to t
 cubed.”
 <ol type='a'>
@@ -137,6 +139,7 @@ real solution.
   <div id="ex5" class="collapse">
     <img src="./twographs_limits2.png" width=400><br>
     <P>Theorem. If \(f(x)\) is continuous at \(L\) and \(\displaystyle \lim_{x \to a} g(x) = L\), then \(\displaystyle \lim_{x \to a}f(g(x)) = f\left( \lim_{x \to a} g(x) \right) = f(L)\).
+    <P>True or False. \(\displaystyle \lim_{x \to 2} g(f(x))\) exists.<br><br>
     <P>True or False. \(\displaystyle \lim_{x \to 2} f(g(x))\) exists.<br><br>
     <P>How does this theorem fit in with \(\displaystyle \lim_{x \to 0} \sin \left( \frac{1}{x} \right)\) DNE?<br><br>
     <P>What is \(\displaystyle \lim_{x \to 0} e^{\frac{\sin(3x)}{3x}}\)?
