--- a/math154/calculus1_limit_def_derivative.html
+++ b/math154/calculus1_limit_def_derivative.html
@@ -53,7 +53,7 @@ $(function () {
     <h2>Example</h2>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0000">Example</button>
       <div id="ex0000" class="collapse">
-        <P>Consider \(f(x) = 2^x\). What is the slope of the graph of \(f\) at \(x=0\)? What is the equation of the tangent line to the graph at this point?
+        <P>Consider \(f(x) = 2^x\). What is the slope of the line tangent to the graph of \(f\) at \(x=0\)? What is the equation of the tangent line to the graph at this point?
         <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
