--- a/math250/week5.html
+++ b/math250/week5.html
@@ -50,6 +50,16 @@
     <li> Calculate the determinant of
       $$B = \begin{bmatrix} 1& 2 & 3\\1 & -4 & 1\\  0 & 3 & -1\end{bmatrix}$$
     </ol>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex0ans">Answers</button>
+      <div id="ex0ans" class="collapse">
+        <ol type='A'>
+          <li>\(AB = \begin{bmatrix} 5&3&2\\1&1&1\end{bmatrix}, AC = \begin{bmatrix} 6&4\\1&2\end{bmatrix}, BC = \begin{bmatrix} 1&1\\5&4\\14&13\end{bmatrix}\)
+          <li>\(Av = -v\)
+          <li>\( M^{-1} = \frac{1}{9}\begin{bmatrix} 4 & -3\\ -5 & 1 \end{bmatrix}\)?
+          <li>14
+          <li>12
+      </div>
+
  </div>
 
 <!--$$begin{bmatrix} a & b\\ c & d \end{bmatrix}-->
