--- a/math250/week6.html
+++ b/math250/week6.html
@@ -45,8 +45,7 @@
 
 
     <li> What is the length of vector \( \vec{v} = \begin{bmatrix}2\\5\\-3\end{bmatrix}\)?
-    <li> True or False. \(\vec{u} = \begin{bmatrix}0\\3\end{bmatrix}\) and \(\vec{v} = \begin{bmatrix}0\\2\end{bmatrix}\) are 
-      linearly dependent.
+    <li> True or False. \(\vec{u} = \begin{bmatrix}0\\3\end{bmatrix}\) and \(\vec{v} = \begin{bmatrix}0\\2\end{bmatrix}\) are linearly depedent.
     </ol>
  </div>
 
@@ -57,12 +56,14 @@
   <div id="ex1" class="collapse">
 
   <P> Write the vector \(\begin{bmatrix}1\\1\end{bmatrix}\) as a linear combination of \(\begin{bmatrix}5\\7\end{bmatrix}\) and \(\begin{bmatrix}2\\3\end{bmatrix}\).
+    <br>
+    <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_60roptw0&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_6o5bsx8j" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 </div>
 
 <h2>Example 2 - Linear independence? </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex2">Example 2</button>
 <div id="ex2" class="collapse">
-<P>The book defines that three vectors \(\vec{u},\vec{v},\vec{w} \in \mathbb{R}^3\) are linearly dependent if and only if there exist scalars \(a,b,c\) not all zero such that \(a\vec{u} + b\vec{v} + c\vec{w} = \vec{0}\).
+<P>The book defines that three vectors \(\vec{u},vec{v},\vec{w} \in \mathbb{R}^3\) are linearly dependent if and only if there exist scalars \(a,b,c\) not all zero such that \(a\vec{u} + b\vec{v} + c\vec{w} = \vec{0}\).
   It then says that the vectors are linearly independent if they are not linearly dependent. What is a definition of linear independence, i.e. what is the negation of the above definition?<br><br>
 
 <P> Determine if the set of vectors \(\left\{ \begin{bmatrix} 1 \\ 1 \\ 1\end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 3\end{bmatrix}, \begin{bmatrix} 1 \\ 3 \\ 2\end{bmatrix} \right\} \) are linearly independent or linearly dependent.
@@ -81,6 +82,8 @@ Spin 1/2 particles can be thought of as a mix of spin up \(\begin{bmatrix} 1/2 \
 Consider a particle \(\chi_1\) in the spin state \(\begin{bmatrix} 1 \\ 0\end{bmatrix}\). Find a linear combination of spin up and spin down that reprents this state, i.e.
 find \(a,b\) such that \( a \begin{bmatrix} 1/2 \\ 1/2\end{bmatrix} + b \begin{bmatrix} 1/2 \\ -1/2\end{bmatrix} = \begin{bmatrix} 1 \\ 0 \end{bmatrix}\).
 Note that \(a\) and \(b\) are related to the probabilty of observing the particle in that state.
+<br>
+<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_9lz8gjry&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_moufx37l" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 
 </div>
 
