--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -172,7 +172,7 @@ $(function () {
 <h2>Example - a few more rules </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex7">Example</button>
   <div id="ex7" class="collapse">
-    <P>Draw the graph of any function and draw the graph of its derivztive beneath it.<br>
+    <P>Draw the graph of any function and draw the graph of its derivative beneath it.<br>
     <P>Now draw your function shifted up 4 units. Draw the graph of the derivative of this new function. What do you notice? <br>
 
     <P>Let \(f\) be a differentiable function and \(a\) be any constant. Then we have the following:
