--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -205,6 +205,9 @@ $(function () {
           <li>\(\displaystyle k(x) = (5x^2 - \pi)(3x^{-2} + 2\sqrt{x})\) <br><br>
         </ol>
 
+      <br><br>
+      <P><b>Exercise</b> What is the equation of the tangent line to \(\displaystyle j(x) = (x^4 + 5)(x^2 - 3)\) at \(x=0\)?
+
     </div>
 
 <h2>Example - quotient rule </h2>
