--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -166,7 +166,20 @@ $(function () {
       <li>\(\displaystyle f_3(x) = x + 2x^2 + 8x^4 + 4\)<br><br>
     </ol>
     <br>
-    <P>Question: Let \(f'(x) = x^2\) and \(g'(x) = x^2\). Does \(f'(x) = g'(x)\)?
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6a">Answers</button>
+    <div id="ex6a" class="collapse">
+      <ol>
+        <li>\(\displaystyle F_1(x) = x^2 + C\)<br><br>
+        <li>\(\displaystyle F_2(x) = (1/3) x^3 + C\)<br><br>
+        <li>\(\displaystyle F_3(x) = (1/2)x^2 + (2/3)x^3 + (8/5)x^5 + 4x + C)\)<br><br>
+      </ol>
+    </div>
+
+    <P>Question: Let \(f'(x) = x^2\) and \(g'(x) = x^2\). Does \(f(x) = g(x)\)?
+      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex6aa">Answer</button>
+      <div id="ex6aa" class="collapse">
+        <P>No. \(f\) does not necessarily equal \(g\). The constants could be different, e.g. \(f(x) = (1/3)x^3 + 1\) and \(g(x) = (1/3)x^3 + 2\).
+        </div>
 </div>
 
 <h2>Example - a few more rules </h2>
