--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -171,7 +171,7 @@ $(function () {
       <ol>
         <li>\(\displaystyle F_1(x) = x^2 + C\)<br><br>
         <li>\(\displaystyle F_2(x) = (1/3) x^3 + C\)<br><br>
-        <li>\(\displaystyle F_3(x) = (1/2)x^2 + (2/3)x^3 + (8/5)x^5 + 4x + C)\)<br><br>
+        <li>\(\displaystyle F_3(x) = (1/2)x^2 + (2/3)x^3 + (8/5)x^5 + 4x + C\)<br><br>
       </ol>
     </div>
 
