--- a/math154/calculus1_derivative_rules.html
+++ b/math154/calculus1_derivative_rules.html
@@ -190,8 +190,8 @@ $(function () {
 
     <P>Let \(f\) be a differentiable function and \(a\) be any constant. Then we have the following:
       <ol>
-        <li>\(\displaystyle f(x) + a = f'(x)\)<br><br>
-        <li>\(\displaystyle f(x+a) = ???\)<br><br>
+        <li>\(\displaystyle (f(x) + a)' = f'(x)\)<br><br>
+        <li>\(\displaystyle (f(x+a))' = ???\)<br><br>
         <li>\(\displaystyle (af(x))' = af'(x)\)<br><br>
         <li>\(\displaystyle f'(ax)) = af'(ax)\)<br><br>
       </ol>
@@ -220,7 +220,8 @@ $(function () {
 
       <br><br>
       <P><b>Exercise</b> What is the equation of the tangent line to \(\displaystyle j(x) = (x^4 + 5)(x^2 - 3)\) at \(x=0\)?
-
+        <br>
+        <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_t7njhdde&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_8eng8f4i" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
     </div>
 
 <h2>Example - quotient rule </h2>
@@ -276,6 +277,6 @@ $(function () {
     </div>
 
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
 </body>
 </html>
