--- a/math154/calculus1_chain_rule.html
+++ b/math154/calculus1_chain_rule.html
@@ -121,6 +121,8 @@ changing at \(t = 1\) min.
       <br><br>
 
       <P>Find and interpret \(\displaystyle \frac{dm}{dv}\).
+        <br>
+        <iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_9gija1oq&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_stluthwi" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
   </div>
 
   <h2>Example - </h2>
@@ -154,6 +156,13 @@ changes with respect to time, the change in area with respect to time is
             <li>\(\displaystyle{ \frac{dA}{dt}=2\pi r \frac{dr}{dt}}\)<br>
             <li>not enough information
             </ol><br><br>
+            <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#cv2a">Answers</button>
+              <div id="cv2a" class="collapse">
+                <ol>
+                  <li>c.
+                  <li>c.
+                  </ol>
+                </div>
 
     </ol>
   </div>
