--- a/math250/week6.html
+++ b/math250/week6.html
@@ -192,5 +192,6 @@ We will derive this formula.<br>
 </div>
 -->
 
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
 </body>
 </html>
