--- a/math250/week7.html
+++ b/math250/week7.html
@@ -202,5 +202,6 @@ We will derive this formula.<br>
 </div>
 -->
 
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
 </body>
 </html>
