--- a/math250/week3.html
+++ b/math250/week3.html
@@ -498,5 +498,6 @@ $$\frac{dx}{dt} = \frac{x}{t^2 + 5t + 4} + 4xt\sin(3t)$$
   </ol>
 </div>
 
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
 </body>
 </html>
