--- a/math154/calculus1_chain_rule.html
+++ b/math154/calculus1_chain_rule.html
@@ -172,6 +172,6 @@ changes with respect to time, the change in area with respect to time is
 
 
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
 </body>
 </html>
