--- a/math154/calculus1_log_exp_derivatives.html
+++ b/math154/calculus1_log_exp_derivatives.html
@@ -72,6 +72,7 @@ $(function () {
         <li>\(\displaystyle  K(x) = \sqrt{e^{6x}} \)<br><br>
         <li>\(\displaystyle  L(x) = \sin( e^{\cos{x}} ) \)<br><br>
         <li>\(\displaystyle  M(x) = xe^{5x} \)<br><br>
+        <li>\(\displaystyle  N(x) = 5^{ex} \)<br><br>
         </ul><br><br>
 
 
@@ -169,8 +170,8 @@ s, \(s = 0\) and \(t = 0\).
     <div id="ex12" class="collapse">
       <P>What is the function \(f\) that satisfies \(f'(x) = 3x + 2\) with \(f(0) = 1\)?
     </div>
-
 -->
+
 
 
 </body>
