--- a/math154/calculus1_trig_derivatives.html
+++ b/math154/calculus1_trig_derivatives.html
@@ -176,6 +176,6 @@ s, \(s = 0\) and \(t = 0\).
       </div>
 
 
-
+<footer style="text-align: center; padding-top: 1cm;">copyright Tyler Skorczewski 2020</footer>
 </body>
 </html>
