--- a/math154/calculus1_chain_rule.html
+++ b/math154/calculus1_chain_rule.html
@@ -105,7 +105,7 @@ $(function () {
        where \(r\) (in feet) is the radius of the sphere. Suppose a spherical snowball is melting in the sun.
        <ol type='a'>
          <li> Suppose \(r = \frac{1}{(t + 1)^2} − \frac{1}{12}\) where \(t\) is time in
-minutes. Use the chain rule \(\frac{dS}{dt} = \frac{dS}{dr}\frac{dr}{dt}\) to find
+minutes. Use the chain rule \(\frac{dV}{dt} = \frac{dV}{dr}\frac{dr}{dt}\) to find
 the rate at which the snowball is melting.<br><br>
         <li> Use a. to find the rate at which the volume is
 changing at \(t = 1\) min.
