--- a/math154/calculus1_implicit_differentiation.html
+++ b/math154/calculus1_implicit_differentiation.html
@@ -30,6 +30,13 @@ $(function () {
 
 
 -->
+<h2>Introduction video</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#int">Intro</button>
+  <div id="int" class="collapse">
+From Dr. Mooney in the UW Stout math faculty<br>
+<iframe id="kaltura_player" title="Kaltura Player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_928frtdx&amp;flashvars%5BstreamerType%5D=auto&amp;flashvars%5BlocalizationCode%5D=en&amp;flashvars%5BleadWithHTML5%5D=true&amp;flashvars%5BsideBarContainer.plugin%5D=true&amp;flashvars%5BsideBarContainer.position%5D=left&amp;flashvars%5BsideBarContainer.clickToClose%5D=true&amp;flashvars%5Bchapters.plugin%5D=true&amp;flashvars%5Bchapters.layout%5D=vertical&amp;flashvars%5Bchapters.thumbnailRotator%5D=false&amp;flashvars%5BstreamSelector.plugin%5D=true&amp;flashvars%5BEmbedPlayer.SpinnerTarget%5D=videoHolder&amp;flashvars%5BdualScreen.plugin%5D=true&amp;flashvars%5BKaltura.addCrossoriginToIframe%5D=true&amp;&amp;wid=1_jhubfqzu" width="608" height="342" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *"></iframe>
+</div>
+
   <h2>Warmup </h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#cv">Warmup</button>
     <div id="cv" class="collapse">
@@ -183,7 +190,11 @@ ymax=input_box(1,label="max y"), ):
       </ol>
   </div>
 
-
+  <h2>More Examples video  </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex13">Example</button>
+    <div id="ex13" class="collapse">
+      <P>More examples from Dr. Mooney in the UW Stout math faculty.<br>
+<iframe id="kaltura_player" title="Kaltura Player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=1_ubgh6ruv&amp;flashvars%5BstreamerType%5D=auto&amp;flashvars%5BlocalizationCode%5D=en&amp;flashvars%5BleadWithHTML5%5D=true&amp;flashvars%5BsideBarContainer.plugin%5D=true&amp;flashvars%5BsideBarContainer.position%5D=left&amp;flashvars%5BsideBarContainer.clickToClose%5D=true&amp;flashvars%5Bchapters.plugin%5D=true&amp;flashvars%5Bchapters.layout%5D=vertical&amp;flashvars%5Bchapters.thumbnailRotator%5D=false&amp;flashvars%5BstreamSelector.plugin%5D=true&amp;flashvars%5BEmbedPlayer.SpinnerTarget%5D=videoHolder&amp;flashvars%5BdualScreen.plugin%5D=true&amp;flashvars%5BKaltura.addCrossoriginToIframe%5D=true&amp;&amp;wid=1_5dnhkx6r" width="608" height="342" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="autoplay *; fullscreen *; encrypted-media *"></iframe>
 
 
 </body>
