--- a/math250/week8.html
+++ b/math250/week8.html
@@ -159,7 +159,7 @@
 
 <ol type='1'>
 <li> Find a 2nd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = C_1e^{x} + C_2e^{-x} \).
-<li> Find a 2nd order linear homogeneous DE with constant coefficients that has a solution \(y(x) = A \cos(\pi x) \).
+<li> Find a 2nd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = A \cos(\pi x) \).
 <li> Find a 3rd order linear homogeneous DE with constant coefficients that has general solution \(y(x) = (A + Bx + Cx^2)e^{2x} \).
 <li> Find a 4th order linear homogeneous DE with constant coefficients that has a solution \(y(x) = 5xe^{2x} + 2\cos 2x  \).
 </ol>
@@ -180,39 +180,14 @@
   </ol>
 </div>
 
-<!--
-<h2>Example 9 - Law of Cosines </h2>
+
+<h2>Example 9 - EP section 5.2 # 24 </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example 9</button>
 <div id="ex9" class="collapse">
 
-Consider the figure below.<br>
-<img src="./lawofcosines.jpg" width=350><br>
-By dropping a perpendicular from each vertex to the opposite side, derive the equations below.
-$$c \cos B + b \cos C = a$$
-$$c \cos A + a \cos C = b$$
-$$a \cos B + b \cos A = c$$
-<P>Rewrite these as three linear equations for the unknowns \(\cos A, \cos B\), and \(\cos C\). Row reduce this system to derive the <a href="https://en.wikipedia.org/wiki/Law_of_cosines">Law of Cosines</a>.
-
+<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/p/2370711/sp/237071100/embedIframeJs/uiconf_id/42909941/partner_id/2370711?iframeembed=true&playerId=kaltura_player&entry_id=1_eta67z3n&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_bcb6im7f" width="608" height="342" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
 </div>
 
-<h2>Example 10 - Wheatstone Bridge </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example 10</button>
-<div id="ex10" class="collapse">
-
-The circuit diagram below is called a <a href="https://en.wikipedia.org/wiki/Wheatstone_bridge">Wheatsone bridge</a>. It is useful for determining an unknown resistance of an object.
-When using the bridge to find resistance \(R_x\), resistances \(R_1\) and \(R_3\) are known, while \(R_2\) is adjustable.
-\(R_2\) is adjusted until the current through the middle branch (from junctions B to D) is equal to zero. Then the resistance \(R_x\) can be found from
-$$R_x  = \frac{R_2 R_3}{R_1}.$$
-We will derive this formula.<br>
-<img src="./wheatstonebridge.png" width=350><br>
-
-<ol type='1'>
-<li> Use Kirchoff's current law to write equations for the currents \(I_1, I_2, I_3, I_x, I_G\) in junctions B and D.
-<li> Use Kirchoff's voltage law to write equations for the currents in loops ABD and BCD.
-<li> When the bridge is balanced so \(I_G = 0\) we have 4 linear equations in the unknowns \(I_1, I_2, I_3, I_x\). Use these to derive the formula above.
-</ol>
-</div>
--->
 
 </body>
 </html>
