--- a/math154/calculus1_derivatives_exam_review.html
+++ b/math154/calculus1_derivatives_exam_review.html
@@ -27,7 +27,7 @@ $(function () {
 <hr>
 
 
-<h2>Example - Torricelli's law </h2>
+<!--<h2>Example - Torricelli's law </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example</button>
   <div id="ex10" class="collapse">
     <img src="./tortank.png" width=100><br>
@@ -75,7 +75,7 @@ ymax=input_box(1,label="max y"), ):
   s, \(s = 0\) and \(t = 0\).
     </div>
 <br><br><br>
-
+-->
   <h2>More examples </h2>
   <ol type='A'>
 
