--- a/math154/calculus1_related_rates.html
+++ b/math154/calculus1_related_rates.html
@@ -119,6 +119,14 @@ $(function () {
           What is the rate that the tip of the shadow moves away from the pole of the lamppost when the person is 10 feet away from the pole?
         </div>
 
+        <h2>Example - resistors </h2>
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#eex7">Example</button>
+          <div id="eex7" class="collapse">
+            <P> If two electrical resistors are connected in parallel,
+              the total resistance is given by \(\displaystyle \frac{1}{R} = \frac{1}{R_1} + \frac{1}{R_2}\).
+              If \(R_1\) is increasing at a rate of \(0.5 \Omega\) per second and \(R_2\) is decreasing at a rate of \(1 \Omega\) per second,
+              at what rate is the total resistance changing when \(R_1 = 20\Omega\) and \(R_2 = 50\Omega\)?
+            </div>
 
 
 </body>
